minor ar ch changes

--- a/.gitconfig
+++ b/.gitconfig
@@ -82,3 +82,6 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[user]
+	email = matt@iflowfor8hours.info
+	name = matt
