--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,71 +1,45 @@
 # also ctrl-s
 set -g prefix2 C-s
 
-## mouse
-#if-shell '[[ $(echo "$(tmux -V | cut -d" " -f2) >= 2.1" | bc) -eq 1 ]]' \
-#    'set -g mouse on;
-#    bind m set -g mouse on \;
-#    display "Mouse ON";
-#    bind M set -g mouse off \;
-#    display "Mouse OFF"' \
-#    'set -g mode-mouse on
-#     set -g mouse-resize-pane on;
-#     set -g mouse-select-pane on;
-#     set -g mouse-select-window on;
-#     bind m set -g mode-mouse on \;
-#     set -g mouse-resize-pane on \;
-#     set -g mouse-select-pane on \;
-#     set -g mouse-select-window on \;
-#     display "Mouse ON";
-#     bind M set -g mode-mouse off \;
-#     set -g mouse-resize-pane off \;
-#     set -g mouse-select-pane off \;
-#     set -g mouse-select-window off \;
-#     display "Mouse OFF"'
-
 # Make tmux act like xterm to prevent Vim issues:
-# set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-    set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
-    # set -g mouse on
+#set -g mouse on
 
 # Only resize the screen size if the smaller screen user has their window
-    setw -g aggressive-resize on
+#setw -g aggressive-resize on
 
 # Store a lot of history.
-    set -g history-limit 100000
+set -g history-limit 100000
 
 # Relax!
-    set -sg escape-time 0
-    set -sg repeat-time 600
+set -sg escape-time 0
+set -sg repeat-time 600
 
 # prefix -> back-one-character
-    set -g prefix None
-    bind-key C-b send-prefix
+set -g prefix None
+bind-key C-b send-prefix
 # prefix-2 -> forward-incremental-history-search
-    bind-key C-s send-prefix -2
+bind-key C-s send-prefix -2
 
 # Shut up.
-    set visual-silence on
-    set monitor-silence on
+#set visual-silence on
+#set monitor-silence on
 
 # Less stretching to get to the first item.
-    set -g base-index 1
-    setw -g pane-base-index 1
+set -g base-index 1
+setw -g pane-base-index 1
 
-    bind-key -T copy-mode-vi C-h select-pane -L
-    bind-key -T copy-mode-vi C-j select-pane -D
-    bind-key -T copy-mode-vi C-k select-pane -U
-    bind-key -T copy-mode-vi C-l select-pane -R
-    bind-key -T copy-mode-vi C-\ select-pane -l
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
 
-    #bind-key -T copy-mode-vi WheelUpPane scroll-up
-    #bind-key -T copy-mode-vi WheelDownPane scroll-down
-    #bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
-    #bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
 
 # Reload the config.
-    bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 # Use Vim movement key mappings for switching around between panes.
     bind h select-pane -L
@@ -127,25 +101,25 @@ set -g prefix2 C-s
     if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 # copy to X11 clipboard   if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
     # if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
-    setw -g mode-keys vi
-    bind ` copy-mode
-    bind P paste-buffer
-    bind p paste-buffer
+setw -g mode-keys vi
+#bind ` copy-mode
+#bind P paste-buffer
+#bind p paste-buffer
 
 ## Custom status bar
-    set -g status-left-length 32
-    set -g status-right-length 150
-    set -g status-interval 5
+set -g status-left-length 32
+set -g status-right-length 150
+set -g status-interval 5
 
-    set -g status-left '#[fg=colour16,bg=colour254,bold] #S '
+set -g status-left '#[fg=colour16,bg=colour254,bold] #S '
 
-    set -g status-right "%d %b #[fg=colour254,bg=colour234,nobold]#[fg=colour16,bg=colour254,bold] #(date +%%H:%%M) "
+set -g status-right "%d %b #[fg=colour254,bg=colour234,nobold]#[fg=colour16,bg=colour254,bold] #(date +%%H:%%M) "
 
-    set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-    set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
+set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
 
 # Center the window list
-    set -g status-justify centre
+set -g status-justify centre
 
 # Genuinely not a clue till I try on linux
 #tmux_commands_with_legacy_scroll="nano less more man"
@@ -159,3 +133,12 @@ set -g prefix2 C-s
 #'send -Mt=' \
 #'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
 "send -t= Down Down Down" "send -Mt="'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-logging'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
